--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -95,6 +95,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def napier(n):\n",
+    "    while True:\n",
+    "        yield (1+(1/n))**n\n",
+    "        n += 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.7182817983473577"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# lambda p: \n",
+    "(lambda n: (1+(1/(10**n)))**(10**n))(8)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
