--- a/math_snippets.ipynb
+++ b/math_snippets.ipynb
@@ -14,38 +14,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Logstic(Sigmoid) function to Logit function"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "$$ \n",
-    "\\large p = \\frac{1}{1+\\exp(-x)} \\quad \\Rightarrow \\quad \\exp(-x) = \\frac{1}{p}-1\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "$$ \n",
-    "\\large\n",
-    "\\Rightarrow \\quad x = -\\log(\\frac{1}{p}-1) \\quad = \\quad -\\log(\\frac{1-p}{p}) \\quad = \\quad \\log(\\frac{p}{1-p}) \\quad = \\quad \\log(p) - \\log(1-p)\n",
-    "$$"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +38,8 @@
     "        x -= x.max(axis=1, keepdims=True)\n",
     "        x = np.exp(x)\n",
     "        return x / x.sum(axis=1, keepdims=True)\n",
-    "        "
+    "\n",
+    "exp = (lambda n: (1+(1/(10**n)))**(10**n))(8)"
    ]
   },
   {
@@ -108,57 +79,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Differentiations with Napier's constant"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.0 2.44140625 2.546499697040712 2.5937424601000023\n",
-      "2.7048138294215285 2.7169239322355936 2.7181459268249255\n"
-     ]
-    }
-   ],
-   "source": [
-    "# e = ((1+(1/n))**n for n in range(1, 10<<100))\n",
-    "def napier(n):\n",
-    "    while True:\n",
-    "        yield (1+(1/n))**n\n",
-    "        n += 3\n",
-    "e = napier(1)\n",
-    "print(next(e), next(e), next(e), next(e))\n",
-    "print(napier(100).__next__(), napier(1000).__next__(), napier(10000).__next__())"
+    "## Sigmoid Derivative"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Softmax with Loss Partial Derivative"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
    "source": [
     "$$\n",
-    "\\large\n",
-    "Softmax \\quad y_k = \\frac{\\exp(a_k)}{\\sum_{i=1}^n \\exp(a_i)} \\quad \\quad =>\\; S \\;=\\;\\sum_{i=1}^n \\exp(a_i)\\;, \\quad f \\; = \\; \\exp(a_k)\n",
+    "\\large S = \\frac{1}{1+\\exp(-x)}\n",
     "$$"
    ]
   },
@@ -167,196 +96,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\large\n",
-    "Categorical \\, Cross \\, Entropy \\, Error \\quad L = -\\frac{1}{n}\\sum_{i=1}^n t_i\\log(y_i)\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large\n",
-    "Binary \\, Cross \\, Entropy \\, Error \\quad L = -\\frac{1}{n}\\sum_{i=1}^n \\{t_i\\log(y_i) + (1 - t_i)\\log(1 - y_i)\\}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Loss(Categorical) Partial Derivative "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large\n",
-    "-\\frac{t_k}{y_k} \\quad  = \\quad -t_k \\times \\frac{1}{y_k}\\Bigl(\\small= \\frac{\\partial\\log y_k}{\\partial y_k} \\large \\Bigr) \\; \\longleftarrow \\; -1 \\times t_k \\; \\longleftarrow \\; -1 + 0 \\Bigl(\\small= (\\sum_k)' \\large \\Bigr)  \\; \\longleftarrow \\; 1 \\times -1 \\; \\longleftarrow \\; 1 \\Bigl(\\small= \\frac{\\partial L}{\\partial L} \\large \\Bigr)\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Loss(Binary) Partial Derivative "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large \\frac{y_k - t_k}{y_k (1 - y_k)} \\quad = \\quad - \\{t_k\\log(y_k) + (1 - t_k)\\log(1 - y_k)\\}\\; \\longrightarrow \\;\n",
-    "-\\;\\Bigl(\\frac{t_k}{y_k} + \\frac{1 - t_k}{1 - y_k}\\times(-1)\\Bigr)\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Softmax Partial Derivative "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large \\frac{\\partial y_k}{\\partial a_i} \\; = \\; \\frac{f'S - fS'}{S^2}\n",
-    "\\;=\\; \\frac{0 \\times S - \\exp(a_k)\\exp(a_i)}{S^2}\\;=\\; - y_k y_i\\;=y_k (0 \\;- y_i) \\quad \\in \\quad a_k \\ne a_i\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large \\large \\frac{\\partial y_k}{\\partial a_i} \\;=\\; \\frac{\\exp(a_k)S - \\exp(a_k)S'}{S^2}\n",
-    "\\;=\\; \\frac{\\exp(a_k)}{S}(1 - \\frac{exp(a_k)}{S})\n",
-    "\\;=\\; y_k (1 \\;- y_k)\n",
-    "\\quad \\in \\quad a_k = a_i\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large \\sum_{i=1}^n \\frac{\\partial y_k}{\\partial a_i} \n",
-    "\\;=\\; y_k \\sum_{i=1}^n (I_i - y_i)\n",
-    " \\quad \\quad => I \\;=\\; Identity\\;Matrix\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Loss(Categorical) with Softmax Partial Derivative"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large \\quad a_k \\ne a_i\\quad => \\quad - y_k y_i\\;\\times -\\frac{t_k}{y_k} \\;=\\; t_k y_i\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large \\quad a_k = a_i\\quad => \\quad y_k (1 - y_k)\\;\\times -\\frac{t_k}{y_k} \\;=\\; t_k(y_k - 1)\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large y_k(I_{ki} - y_i) \\times -\\frac{t_k}{y_k} \\;=\\; t_k(y_i - I_{i})\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Loss(Binary ) with Softmax Partial Derivative  <font color=\"Red\">(Binary Cross Entropy should be used with Sigmoid)</font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large \\quad a_k \\ne a_i\\quad => \\quad - y_k y_i\\;\\times \\frac{t_k - y_k}{y_k (1 - y_k)}\n",
-    "\\; =\\; \\frac{y_i(y_k - t_k)}{1 - y_k}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large \\quad a_k = a_i\\quad => \\quad y_k (1 - y_k)\\;\\times \\frac{y_k - t_k}{y_k (1 - y_k)} \\;=\\; y_k - t_k\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large y_k \\sum_{i=1}^n (I_i - y_i) \\times \\frac{y_k - t_k}{y_k (1 - y_k)} \\;=\\; \\frac{(t_k - y_k)}{1 - y_k} \\sum_{i=1}^n (y_i - I_i)\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "## Sigmoid Partial Derivative"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large \\Bigl(\\frac{1}{1+\\exp(-x)} \\Bigr)' \\;=\\; \\frac{\\partial S}{\\partial Z}\\frac{\\partial Z}{\\partial y}\\frac{\\partial y}{\\partial x}\n",
-    "\\qquad S = \\frac{1}{1+\\exp(-x)}, \\quad Z \\;=\\; 1+\\exp(-x), \\quad y \\;=\\; -x\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large -\\frac{1}{(1+\\exp(-x))^2} \\times \\exp(-x) \\times -1 \\;=\\; \\frac{\\exp(-x)}{(1+\\exp(-x))^2}\n",
+    "\\large \\frac{dS}{dx}\\;=\\; -\\frac{1}{(1+\\exp(-x))^2} \\exp(-x) (-1) \\;=\\; \\frac{\\exp(-x)}{(1+\\exp(-x))^2}\n",
     "$$"
    ]
   },
@@ -371,13 +111,103 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Softmax Partial Derivative"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\; S \\;=\\;\\frac{\\exp(a_k)}{\\sum_{i=1}^n \\exp(a_i)} \\quad \\quad ; \\; \\sum \\;=\\; \\sum_{i=1}^n \\exp(a_i),\\quad a_k \\ne a_j\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\frac{\\partial S}{\\partial a_k}  \\; = \\; \\frac{\\exp(a_k)\\sum - \\exp(a_k)\\sum'}{\\sum^2} \\; = \\; \\frac{\\exp(a_k)\\sum - \\exp(a_k)\\exp(a_k)}{\\sum^2}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\frac{ \\Big(\\sum - \\exp(a_k)\\Big) \\exp(a_k)}{\\sum^2}\\;=\\;\\frac{\\exp(a_k)}{\\sum} \\frac{\\sum - \\exp(a_k)}{\\sum} \\; = \\; S(1-S)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\frac{\\partial S}{\\partial a_j}  \\; = \\; \\frac{0\\sum - \\exp(a_k)\\sum'}{\\sum^2} \\; = \\; \\frac{0 - \\exp(a_k)\\exp(a_j)}{\\sum^2}\n",
+    " \\; = \\; S(0-S)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Softmax with Loss Partial Derivative"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large\n",
+    "Categorical \\, Cross \\, Entropy \\, Error \\quad L = -\\frac{1}{n}\\sum_{i=1}^n t_i\\log(y_i)\n",
+    "\\quad \\quad ; \\; y_i \\;=\\ Softmax(a_i);\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\frac{\\partial L(S(a_k))}{\\partial a_k} \\;=\\; \\Big(-\\frac{t_k}{S}\\Big) \\frac{\\partial S}{\\partial a_k}\n",
+    "\\;=\\;  \\Big(-\\frac{t_k}{S}\\Big) S(1-S) \\; = \\; t_k(S-1)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\frac{\\partial L(S(a_k))}{\\partial a_j} \\;=\\; \\Big(-\\frac{t_k}{S}\\Big) \\frac{\\partial S}{\\partial a_k}\n",
+    "\\;=\\;  \\Big(-\\frac{t_k}{S}\\Big) S(0-S) \\; = \\; t_k(S-0)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\frac{\\partial L(S(a_k))}{\\partial I_i} \\;=\\; t_k(S-I_i) \\qquad; \n",
+    "\\; I = Identity\\; Matrix \\quad \\{1\\;|\\;i = k,\\quad0\\;|\\;i \\neq k\\}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " "
+   ]
   }
  ],
  "metadata": {
