sample variance derivaration

--- a/math_snippets.ipynb
+++ b/math_snippets.ipynb
@@ -19,7 +19,8 @@
     "- sigmoid derivative\n",
     "- sofmax partial derivative\n",
     "- softmax with loss partial derivative\n",
-    "- tanh derivative"
+    "- tanh derivative\n",
+    "- sample variance"
    ]
   },
   {
@@ -261,6 +262,115 @@
    "source": [
     "$$\n",
     "\\large \\frac{g^2-f^2}{g^2} \\;= \\; 1 - S^2 \\quad \\quad ; \\; \\frac{1}{cosh^2x}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sample Variance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large V[\\bar{X}] =\\; E[(\\bar{X} - \\mu)^2] \\quad \\quad ; \\; \\mu \\;is\\;expectation\\;of\\;sample\\;and\\;population\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large E[(\\frac{1}{n}\\sum_{i = 1}^n X_{i} -\\mu)^2] \\;=\\; E[\\{\\frac{1}{n}(\\sum_{i = 1}^n X_{i} -n\\mu)\\}^2]\n",
+    "\\;=\\; \\frac{1}{n^2}E[\\{\\sum_{i = 1}^n (X_{i} -\\mu)\\}^2]\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\n",
+    "\\begin{align}\n",
+    "\\large \\quad Inside \\; E[]\n",
+    "\\end{align}\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\sum_{i = 1}^n (X_{i} -\\mu)\\sum_{j = 1}^n (X_{j} -\\mu)\n",
+    "\\;=\\; \\sum_{i = 1}^n \\sum_{j = 1}^n (X_{i} -\\mu)(X_{j} -\\mu)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\n",
+    "\\begin{align}\n",
+    "\\large \\qquad where\\; X_{i} = X_{j}\\qquad => \\qquad (X_{i} - \\mu)^2 \\qquad ; \\; n\\;time\\;occurrence\n",
+    "\\end{align}\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\n",
+    "\\begin{align}\n",
+    "\\large \\qquad where\\; X_{i} \\neq X_{j}\\qquad => \\qquad (X_{i} - \\mu)(X_{j} - \\mu)\n",
+    "\\;=\\; E[X_{i}]E[X_{j}] -\\mu E[X_{i}] -\\mu E[X_{j}] +\\mu^2\n",
+    "\\end{align}\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\;=\\; \\mu^2 -\\mu^2 -\\mu^2 +\\mu^2 \\;=\\; 0\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\n",
+    "\\begin{align}\n",
+    "\\large \\quad Outside \\; E[]\n",
+    "\\end{align}\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\frac{1}{n^2}E[\\sum_{i = 1}^n \\sum_{j = 1}^n (X_{i} -\\mu)(X_{j} -\\mu)]\n",
+    "\\;=\\; \\frac{1}{n^2}E[n(X_{i} - \\mu)^2]\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\frac{1}{n}E[(X_{i} - \\mu)^2] \\;=\\; \\frac{1}{n}V[X]\n",
     "$$"
    ]
   },
