unbiased estimator for population variance

--- a/math_snippets.ipynb
+++ b/math_snippets.ipynb
@@ -20,7 +20,8 @@
     "- sofmax partial derivative\n",
     "- softmax with loss partial derivative\n",
     "- tanh derivative\n",
-    "- sample variance"
+    "- sample variance\n",
+    "- unbiased estimator for population variance"
    ]
   },
   {
@@ -371,6 +372,76 @@
    "source": [
     "$$\n",
     "\\large \\frac{1}{n}E[(X_{i} - \\mu)^2] \\;=\\; \\frac{1}{n}V[X]\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Unbiased Estimator for Population Variance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large E[V[X]] \\;=\\; E[\\frac{1}{n}\\sum_{i=1}^n(X_i - \\bar{X})^2]\n",
+    "\\;=\\; E[\\frac{1}{n}\\sum_{i=1}^n\\{(X_i - \\mu) - (\\bar{X} - \\mu)\\}^2]\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large E[\\frac{1}{n}\\sum_{i=1}^n\\{(X_i - \\mu)^2 -2(X_i - \\mu)(\\bar{X} - \\mu) + (\\bar{X} - \\mu)^2\\}]\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large E[\\frac{1}{n}\\sum_{i=1}^n(X_i - \\mu)^2 -\\frac{2}{n}(\\bar{X} - \\mu)\\sum_{i=1}^n(X_i - \\mu) + (\\bar{X} - \\mu)^2]\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\frac{1}{n}\\sum_{i=1}^nE[(X_i - \\mu)^2] -\\frac{2}{n}E[(\\bar{X} - \\mu)]\\sum_{i=1}^nE[(X_i - \\mu)] + E[(\\bar{X} - \\mu)^2]\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large\n",
+    "\\begin{eqnarray}\n",
+    "    \\left\\{\n",
+    "        \\begin{array}\n",
+    "            {1} \\frac{1}{n}\\sum_{i=1}^nE[(X_i - \\mu)^2] \\qquad \\qquad \\qquad \\quad = \\qquad V[X]\n",
+    "            \\\\ \\frac{2}{n}E[(\\bar{X} - \\mu)]\\sum_{i=1}^nE[(X_i - \\mu)] \\qquad = \\qquad 0 \\qquad \\qquad ; E[\\bar{X}]\\;=\\;E[X_i] \\;=\\; \\mu\n",
+    "            \\\\ E[(\\bar{X} - \\mu)^2] \\qquad \\qquad \\qquad \\qquad \\qquad \\quad = \\qquad \\frac{1}{n}V[X]\n",
+    "        \\end{array}\\right.\n",
+    "    \\end{eqnarray}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large V[X] -0 + \\frac{1}{n}V[X] \\;=\\; (1- \\frac{1}{n})V[X] \\qquad ; \\quad nE[V[X]] = (n - 1)V[X]\n",
     "$$"
    ]
   },
